--- a/styles.css
+++ b/styles.css
@@ -14,22 +14,27 @@ body {
     flex-direction: column;
 }
 
+img {
+    width: 100%;
+    height: auto;
+}
+
 footer {
-    background-color: lightcyan;
-    color: lightslategray;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 10px;
 }
 
 .heading-content {
-
+    text-align: center;
 }
 
-#heading-name {
-
+.heading-content h1 {
+    font-family: cursive;
 }
 
-#motto {
+.heading-content p {
 
 }
 
@@ -60,37 +65,35 @@ footer {
 
 }
 
+.main-container h2 {
+    text-align: center;
+    font-weight: bolder;
+}
+
+.main-container p {
+    text-align: center;
+}
 
 #about-container {
     background-color: #888888;
     box-shadow: 0 4px 8px rgba(0,0,0,.3);
-    margin: 5px;
-    padding: 70px 20px;
-    min-width: 400px;
-    border-radius: 50px;
-    position: absolute;
-    left: 150px;
-    top: 135px;
+    margin: 40px;
+    padding: 80px 50px;
+    width: 50%;
+    border-radius: 40px;
     color: #fcfdfd;
     opacity: 0.85;
     transition: transform 0.2s;
     justify-content: flex-start;
 }
 
-.types-content {
-
-}
-
 #types-container {
     background-color: #888888;
     box-shadow: 0 4px 8px rgba(0,0,0,.3);
-    margin: 5px;
-    padding: 70px 20px;
-    min-width: 400px;
-    border-radius: 50px;
-    position: absolute;
-    left: 150px;
-    top: 135px;
+    margin: 40px;
+    padding: 80px 50px;
+    width: 50%;
+    border-radius: 40px;
     color: #fcfdfd;
     opacity: 0.85;
     transition: transform 0.2s;
@@ -100,16 +103,12 @@ footer {
 #feature-container {
     background-color: #888888;
     box-shadow: 0 4px 8px rgba(0,0,0,.3);
-    margin: 5px;
-    padding: 70px 20px;
-    min-width: 400px;
-    border-radius: 50px;
-    position: absolute;
-    left: 150px;
-    top: 135px;
-    color: #ffffff;
+    margin: 40px;
+    padding: 80px 50px;
+    width: 50%;
+    border-radius: 40px;
+    color: #fcfdfd;
     opacity: 0.85;
     transition: transform 0.2s;
     justify-content: flex-start;
 }
-
