--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
+    background-color: blanchedalmond;
 }
 
 img {
@@ -45,6 +46,11 @@ footer {
     align-items: center;
     justify-content: center;
     color: wheat;
+    font-size: larger;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: sticky;
+    top: 0;
 }
 
 .nav a,
@@ -62,7 +68,9 @@ footer {
 }
 
 .main-container {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main-container h2 {
@@ -74,41 +82,66 @@ footer {
     text-align: center;
 }
 
-#about-container {
-    background-color: #888888;
-    box-shadow: 0 4px 8px rgba(0,0,0,.3);
+
+.about-container {
+    background-color: rgb(188, 149, 76);
+    box-shadow: 0 16px 20px rgba(0,0,0,.3);
     margin: 40px;
     padding: 80px 50px;
-    width: 50%;
+    width: 25%;
     border-radius: 40px;
     color: #fcfdfd;
     opacity: 0.85;
     transition: transform 0.2s;
-    justify-content: flex-start;
 }
 
-#types-container {
-    background-color: #888888;
-    box-shadow: 0 4px 8px rgba(0,0,0,.3);
-    margin: 40px;
-    padding: 80px 50px;
-    width: 50%;
-    border-radius: 40px;
-    color: #fcfdfd;
-    opacity: 0.85;
-    transition: transform 0.2s;
-    justify-content: flex-start;
+.about-container:hover {
+    transform: scale(1.015,1.015);
 }
 
-#feature-container {
-    background-color: #888888;
-    box-shadow: 0 4px 8px rgba(0,0,0,.3);
+.about-content {
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.types-container {
+    background-color: rgb(188, 149, 76);
+    box-shadow: 0 16px 20px rgba(0,0,0,.3);
     margin: 40px;
     padding: 80px 50px;
-    width: 50%;
+    width: 25%;
     border-radius: 40px;
     color: #fcfdfd;
     opacity: 0.85;
     transition: transform 0.2s;
-    justify-content: flex-start;
+}
+
+.types-container:hover {
+    transform: scale(1.015,1.015);
+}
+
+.types-content {
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.feature-container {
+    background-color: rgb(188, 149, 76);
+    box-shadow: 0 16px 20px rgba(0,0,0,.3);
+    margin: 40px;
+    padding: 80px 50px;
+    width: 25%;
+    border-radius: 40px;
+    color: #fcfdfd;
+    opacity: 0.85;
+    transition: transform 0.2s;
+}
+
+.feature-container:hover {
+    transform: scale(1.015,1.015);
+}
+
+.feature-content {
+    flex-wrap: wrap;
+    flex-direction: row;
 }
