--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,6 @@ footer {
     font-family: cursive;
 }
 
-.heading-content p {
-
-}
-
 #header-nav {
     background-color: black;
     height: 60px;
@@ -71,6 +67,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .main-container h2 {
@@ -91,17 +89,11 @@ footer {
     width: 25%;
     border-radius: 40px;
     color: #fcfdfd;
-    opacity: 0.85;
     transition: transform 0.2s;
 }
 
 .about-container:hover {
     transform: scale(1.015,1.015);
-}
-
-.about-content {
-    flex-wrap: wrap;
-    flex-direction: row;
 }
 
 .types-container {
@@ -112,7 +104,6 @@ footer {
     width: 25%;
     border-radius: 40px;
     color: #fcfdfd;
-    opacity: 0.85;
     transition: transform 0.2s;
 }
 
@@ -120,10 +111,6 @@ footer {
     transform: scale(1.015,1.015);
 }
 
-.types-content {
-    flex-wrap: wrap;
-    flex-direction: row;
-}
 
 .feature-container {
     background-color: rgb(188, 149, 76);
@@ -133,7 +120,6 @@ footer {
     width: 25%;
     border-radius: 40px;
     color: #fcfdfd;
-    opacity: 0.85;
     transition: transform 0.2s;
 }
 
@@ -141,7 +127,132 @@ footer {
     transform: scale(1.015,1.015);
 }
 
-.feature-content {
-    flex-wrap: wrap;
-    flex-direction: row;
+@media(max-width: 651px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Poppins', sans-serif;
+    }
+    
+    html, body {
+        height: 100%;
+    }
+    
+    body {
+        display: flex;
+        background-color: blanchedalmond;
+    }
+    
+    img {
+        width: 100%;
+        height: auto;
+    }
+    
+    footer {
+        background-color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
+        text-align: center;
+        padding: 10px;
+    }
+    
+    .heading-content {
+        text-align: center;
+    }
+    
+    .heading-content h1 {
+        font-family: cursive;
+    }
+    
+    #header-nav {
+        background-color: black;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: wheat;
+        font-size: larger;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        position: sticky;
+        top: 0;
+    }
+    
+    .nav a,
+    .nav a:visited {
+        font-family: 'Times New Roman', Times, serif;
+        color: #ffffff;
+        font-weight: bold;
+        text-decoration: none;
+        padding: 10px 15px;
+        transition: all 0.5s ease-in-out;
+    }
+    
+    .nav a:hover {
+        color: rgb(165, 234, 255);
+    }
+    
+    .main-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .main-container h2 {
+        text-align: center;
+        font-weight: bolder;
+    }
+    
+    .main-container p {
+        text-align: center;
+    }
+    
+    
+    .about-container {
+        background-color: rgb(188, 149, 76);
+        box-shadow: 0 16px 20px rgba(0,0,0,.3);
+        margin: 10px;
+        padding: 50px 20px;
+        width: 75%;
+        border-radius: 40px;
+        color: #fcfdfd;
+        transition: transform 0.2s;
+    }
+    
+    .about-container:hover {
+        transform: scale(1.015,1.015);
+    }
+    
+    .types-container {
+        background-color: rgb(188, 149, 76);
+        box-shadow: 0 16px 20px rgba(0,0,0,.3);
+        margin: 10px;
+        padding: 50px 20px;
+        width: 75%;
+        border-radius: 40px;
+        color: #fcfdfd;
+        transition: transform 0.2s;
+    }
+    
+    .types-container:hover {
+        transform: scale(1.015,1.015);
+    }
+    
+    
+    .feature-container {
+        background-color: rgb(188, 149, 76);
+        box-shadow: 0 16px 20px rgba(0,0,0,.3);
+        margin: 10px;
+        padding: 50px 20px;
+        width: 75%;
+        border-radius: 40px;
+        color: #fcfdfd;
+        transition: transform 0.2s;
+    }
+    
+    .feature-container:hover {
+        transform: scale(1.015,1.015);
+    }
 }
